--- a/home.css
+++ b/home.css
@@ -1,106 +1,147 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700&display=swap");
 
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'League Spartan', sans-serif;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "League Spartan", sans-serif;
 }
 
-h1{
-    font-size: 60px;
-    line-height: 74px;
-    color: #222;
-    font-weight: 600;
+h1 {
+  font-size: 60px;
+  line-height: 74px;
+  color: #222;
+  font-weight: 600;
 }
 
-h2{
-    font-size: 56px;
-    line-height: 64px;
-    color: #222;
-    font-weight: 600;
+h2 {
+  font-size: 56px;
+  line-height: 64px;
+  color: #222;
+  font-weight: 600;
 }
 
-h4{
-    font-size: 30px;
-    color: #222;
+h4 {
+  font-size: 30px;
+  color: #222;
 }
 
-h6{
-    font-size: 22px;
-    font-weight: 650;
-    color: #222;
+h6 {
+  font-size: 22px;
+  font-weight: 650;
+  color: #222;
 }
 
-p{
-    font-size: 26px;
-    color: #465b52;
-    margin: 15px 0px 20px 0px;
+p {
+  font-size: 26px;
+  color: #465b52;
+  margin: 15px 0px 20px 0px;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 80px;
-    margin-bottom: 16px;
-    background-color: #eff0f5;
-    box-shadow: 0px 5px 10px rgb(186, 250, 199);
-    position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 999;
+.contain {
+  margin: 0 150px;
 }
 
-#navbar ul{
-    display: flex;
-    list-style: none;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 80px;
+  margin-bottom: 16px;
+  background-color: #eff0f5;
+  box-shadow: 0px 5px 10px rgb(186, 250, 199);
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
 
-#navbar ul li{
-    font-size: 18px;
-    font-weight: 600;
-    position: relative;
+#navbar ul {
+  display: flex;
+  list-style: none;
 }
 
-#navbar ul li a{
-    padding: 0px 20px;
-    text-decoration: none;
-    color: #097404;
-    font-weight: lighter;
-    transition: 0.3s ease;
+#navbar ul li {
+  font-size: 18px;
+  font-weight: 600;
+  position: relative;
 }
 
-#navbar ul li a.active{
-    color: rgb(61, 116, 128);
+#navbar ul li a {
+  padding: 0px 20px;
+  text-decoration: none;
+  color: #097404;
+  font-weight: lighter;
+  transition: 0.3s ease;
 }
 
-#navbar ul li a:hover{
-    color: rgb(36, 101, 54);
+#navbar ul li a.active {
+  color: rgb(61, 116, 128);
 }
 
-#navbar li a.active::after{
-    content:"";
-    width: 40%;
-    height:2.4px;
-    background:#606766;
-    position:absolute;
-    bottom:-4px;
-    left:20px;
+#navbar ul li a:hover {
+  color: rgb(36, 101, 54);
 }
 
-.herotext{
-    margin-top: 16rem;
-    margin-left: 8rem;
-}
-span{
-    -webkit-text-fill-color: transparent;
-    background: linear-gradient(90deg,#0a9b1a 0,#17718c);
-    -webkit-background-clip: text;
+#navbar li a.active::after {
+  content: "";
+  width: 40%;
+  height: 2.4px;
+  background: #606766;
+  position: absolute;
+  bottom: -4px;
+  left: 20px;
 }
 
-#hero{
-    display: flex;
-    justify-content: space-around;
+.herotext {
+  margin-top: 16rem;
+}
 
+span {
+  -webkit-text-fill-color: transparent;
+  background: linear-gradient(90deg, #0a9b1a 0, #17718c);
+  -webkit-background-clip: text;
+}
+
+#hero {
+  display: flex;
+  justify-content: space-around;
+  /* background-color: rgb(240, 240, 240); */
+}
+
+/* How it work cards */
+.howWork {
+  margin: 100px 150px;
+  text-align: center;
+}
+
+.howWork h2{
+        text-decoration: underline;
+        text-decoration-thickness: 3px;
+}
+
+.howWorkFlex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card {
+  margin-top: 25px;
+  text-align: center;
+  padding: 30px 80px;
+  font-weight: 500;
+  background-color: #0d8f3a;
+  border-radius: 20px;
+  box-shadow: 5px 5px 2px 1px rgb(62, 131, 77, 0.4);
+  animation: ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.02);
+  animation: ease-in-out;
+}
+
+.card p {
+  color: white;
 }
