--- a/home.css
+++ b/home.css
@@ -38,6 +38,21 @@ p {
   margin: 15px 0px 20px 0px;
 }
 
+#needs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+#farak {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 80px;
+  margin-bottom: 40px;
+}
+
 .navbar {
   background-color: #f6faf5;
   box-shadow: 0 1px 12px #2c6b34;
@@ -82,22 +97,26 @@ span {
 #heroContent {
   display: flex;
   justify-content: space-around;
+  margin-top: 80px;
 }
 
 #heroContent video {
   margin-top: 13.6rem;
   border-radius: 1rem;
+  box-shadow: 0px 1px 12px #132e17;
 }
 
 .howWork {
-  margin: 100px 150px;
+  padding: 80px 150px;
   text-align: center;
+  background-color: #0d8f3a;
 }
 
 .howWork h2 {
   text-decoration: underline;
   margin-bottom: 70px;
   text-decoration-thickness: 3px;
+  color: white;
 }
 
 .howWorkFlex {
@@ -111,10 +130,11 @@ span {
   text-align: center;
   padding: 30px 80px;
   font-weight: 500;
-  background-color: #0d8f3a;
+  background-color: white;
   border-radius: 20px;
-  box-shadow: 5px 5px 2px 1px rgb(62, 131, 77, 0.4);
+  box-shadow: 5px 5px 2px 1px rgba(238, 238, 238, 0.4);
   animation: ease-in-out;
+  width: 25%;
 }
 
 .card:hover {
@@ -123,96 +143,305 @@ span {
 }
 
 .card p {
+  color: black;
+  font-size: 20px;
+}
+
+.card video {
+  border-radius: 0.5rem;
+}
+
+#featured-products {
+  text-align: center;
+}
+
+#featured-products .feature-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 80px;
+  flex-wrap: wrap;
+}
+
+#featured-products .feature-container .product {
+  width: 20%;
+  border: 1px solid #cce7d0;
+  border-radius: 25px;
+  min-width: 250px;
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  transition: 0.2s ease;
+  position: relative;
+}
+
+#featured-products .feature-container .product:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+}
+
+#featured-products .feature-container .product img {
+  width: 100%;
+  border-radius: 25px;
+}
+
+#featured-products .feature-container .product .description {
+  text-align: start;
+  padding: 20px;
+}
+
+#featured-products .feature-container .product .description span {
+  color: #606063;
+  font-size: 14px;
+}
+
+#featured-products .feature-container .product .description h5 {
+  color: #1a1a1a;
+  padding-top: 6px;
+  font-size: 18px;
+}
+
+#featured-products .feature-container .product .description i {
+  color: rgb(243, 181, 25);
+  padding-top: 2px;
+  font-size: 14px;
+}
+
+#featured-products .feature-container .product .description h4 {
+  padding-top: 6px;
+  font-size: 22px;
+  font-weight: 700;
+  color: #088178;
+}
+
+#featured-products .feature-container .product .description .fa-shopping-cart {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #cce7d0;
+  border-radius: 50%;
+  background-color: #e8f6ea;
+  color: #045852;
+  font-weight: 600px;
+  font-size: 14px;
+  position: absolute;
+  bottom: 36px;
+  right: 20px;
+}
+
+#page-header {
+  background-image: url("images/b1.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+#page-header h2,
+p {
   color: white;
 }
 
-/* header{
-    display: flex;
-    justify-content: space-between;
+#page-header p {
+  padding-top: 0px;
+  margin-top: 10px;
+}
+
+#pagination {
+  text-align: center;
+  margin-top: 36px;
+}
+
+#pagination a {
+  padding: 15px 20px;
+  text-decoration: none;
+  background-color: #088178;
+  color: #fff;
+  font-weight: 700px;
+  border-radius: 2px;
+}
+
+#newsletter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url("images/b14.png");
+  background-color: #041e42;
+  background-repeat: no-repeat;
+  background-position: 50% 30%;
+  height: 32vh;
+  width: 100%;
+  padding: 20px 100px;
+  margin: 60px 0;
+}
+
+#newsletter .news-text h4 {
+  color: #fff;
+}
+
+#newsletter .news-text p {
+  color: rgb(100, 100, 100);
+  margin-bottom: 0;
+}
+
+#newsletter .news-form {
+  display: flex;
+  width: 40%;
+}
+
+#newsletter .news-form input {
+  height: 3.125rem;
+  width: 100%;
+  padding: 0 1.25em;
+  font-size: 16px;
+  border: 0;
+  border-radius: 4px 0px 0px 4px;
+  outline: none;
+}
+
+#newsletter .news-form button {
+  border-radius: 0px 4px 4px 0px;
+  background-color: #088178;
+  color: white;
+  border: 0;
+  width: 20%;
+  transition: 0.4s ease;
+}
+
+#newsletter .news-form button:hover {
+  background-color: #0e958c;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 100px;
+  flex-wrap: wrap;
+  background-color: #f6faf5;
+}
+
+footer .col {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+footer .col img {
+  width: 140px;
+  margin-bottom: 30px;
+}
+
+footer .col h4 {
+  font-size: 28px;
+  padding-bottom: 20px;
+}
+
+footer .col p {
+  font-size: 20px;
+  margin: 0px 0px 8px 0px;
+  color: #222;
+}
+
+footer .col a {
+  font-size: 24px;
+  text-decoration: none;
+  color: #222;
+  margin: 0px 0px 8px 0px;
+}
+
+footer .col .install img {
+  border: 1px solid #088178;
+  border-radius: 4px;
+  margin: 15px 0px 20px 0px;
+}
+
+#follow {
+  margin-top: 20px;
+}
+
+#follow h4 {
+  padding-bottom: 10px;
+}
+
+#follow i {
+  color: #465352;
+  margin-right: 4px;
+}
+
+footer #follow i:hover,
+footer .col a:hover {
+  color: #088178;
+}
+
+#copyright {
+  width: 100%;
+  text-align: center;
+}
+
+#copyright p {
+  font-size: 16px;
+  color: #465352;
+  margin: 20px 0px 0px 0px;
+}
+
+/* for shop page */
+
+@media (max-width: 480px) {
+  #page-header {
+    height: 20vh;
+  }
+  #page-header h2 {
+    font-size: 32px;
+  }
+  #page-header p {
+    font-size: 20px;
+    margin: 0px 4px;
+  }
+  #prodetails {
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 20px 80px;
-    margin-bottom: 16px;
-    background-color: #f6faf5;
-    box-shadow: 0 1px 12px #2c6b34;    
-    position: sticky;
+    padding: 20px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
+  #prodetails .product-image {
     width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 12399;
-}
-
-navbar{
-    background: #f6faf5;
-    box-shadow: 0 1px 12px #2c6b34;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
+    padding: 0px;
+    margin-bottom: 25px;
+  }
+  #prodetails .product-details {
     width: 100%;
-    z-index: 125252525;
-}
-
-#navbar ul{
+    padding: 0px;
     display: flex;
-    list-style: none;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #prodetails .product-details h4 {
+    padding-top: 10px;
+    font-size: 24px;
+    padding-bottom: 0px;
+  }
+  #prodetails .product-details h6 {
+    font-size: 20px;
+  }
+  #prodetails .product-details h2 {
+    font-size: 32px;
+  }
+  #prodetails .product-details input {
+    margin-bottom: 20px;
+  }
+  #prodetails .product-details button {
+    margin-bottom: 10px;
+  }
+  #prodetails .product-details p {
+    font-size: 16px;
+  }
+  .sproduct h2 {
+    font-size: 32px;
+  }
 }
-
-#navbar ul li{
-    font-size: 18px;
-    font-weight: 600;
-    position: relative;
-}
-
-#navbar ul li a{
-    padding: 0px 20px;
-    text-decoration: none;
-    color: #097404;
-    font-weight: lighter;
-    transition: 0.3s ease;
-}
-
-#navbar ul li a.active{
-    color: rgb(61, 116, 128);
-}
-
-#navbar ul li a:hover{
-    color: rgb(36, 101, 54);
-}
-
-#navbar li a.active::after{
-    content:"";
-    width: 40%;
-    height:2.4px;
-    background:#606766;
-    position:absolute;
-    bottom:-4px;
-    left:20px;
-}
-
-.herotext{
-    margin-top: 16rem;
-    margin-left: 8rem;
-}
-span{
-    -webkit-text-fill-color: transparent;
-    background: linear-gradient(90deg,#0a9b1a 0,#17718c);
-    -webkit-background-clip: text;
-}
-
-#hero{
-    display: flex;
-    justify-content: space-around;
-    background-color: #f6faf5;
-    background-position: bottom;
-    background-repeat: no-repeat,no-repeat;
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat,no-repeat;
-    background-size: cover;
-    height: 100vh
-}
-video{
-    border: none;
-    overflow: hidden;
-    margin-top: 5rem;
-    border-radius: 1rem;
-} */
